# StaticFlow-diploma

./: .gitignore  LICENSE  MANIFEST.in  README.md  about.html  api.html  blocks.html  blocks_guid.html  config.toml  contacts.html  content.html  deploy.html  feed.xml  index.html  installation.html  playground.html  plugins.html  project.html  pyproject.toml  pytest.ini  quickstart.html  requirements.txt  rst-example.html  setup.py  sitemap.xml  templates.html
demo/: config.toml
demo/content/: index.md
demo/public/: index.html
demo/templates/: base.html
docs/: api.md  config-documentation.md  routing.md  user_guide.md
documentation/: config.toml
documentation/content/: about.md  api.md  blocks.md  blocks_guid.md  contacts.md  content.md  deploy.md  index.md  installation.md  plugins.md  project.md  quickstart.md  templates.md  test.md  themes.md  untitled.md
documentation/deploy/: .key  github_pages.json
documentation/output/: about.html  api.html  blocks.html  blocks_guid.html  contacts.html  content.html  deploy.html  feed.xml  index.html  installation.html  playground.html  plugins.html  project.html  quickstart.html  sitemap.xml  templates.html  test.html  themes.html  untitled-page.html
documentation/templates/: base.html  en_page.html  page.html
en/: about.html  api.html  blocks.html  contacts.html  deploy.html  index.html  installation.html  plugins.html  project.html  quickstart.html
examples/blog/: config.toml
scripts/: publish.py  release.py
static/css/: code_highlight.css  style.css
staticflow/: __init__.py  requirements.md
staticflow/admin/: __init__.py  package-lock.json  package.json  webpack.config.js
staticflow/assets/: __init__.py  manager.py
staticflow/cli/: __init__.py  build.py  create.py  deploy.py  serve.py  server.py  templates.py
staticflow/core/: __init__.py  builder.py  cache.py  category.py  config.py  engine.py  page.py  (+3 more)
testproject/: config.toml
tests/: .coverage  README.md  conftest.py  test_admin.py  test_cache.py  test_core.py  test_performance.py  test_plugins.py
uml/: activity.plantuml  activity.planyuml  class.plantuml  class.planuml  core.py  sequence.plantuml  state.plantuml  state.planuml  uml_descriptions.md  use_case.plantuml  use_case_separate.plantuml
(+172 files in other folders)
