[tool.poetry]
name = "staticflow"
version = "0.1.0"
description = "Static site generator with block editor support"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "staticflow"}]

[tool.poetry.dependencies]
python = "^3.9"
markdown = "^3.4.0"
jinja2 = "^3.1.0"
pyyaml = "^6.0"
watchdog = "^2.1.0"
click = "^8.1.0"
python-frontmatter = "^1.0.0"
bleach = "^6.0.0"
pymdown-extensions = "^10.0.0"
python-slugify = "^8.0.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
requests = "^2.31.0"
aiohttp = "^3.8.0"
aiofiles = "^23.0.0"
python-multipart = "^0.0.6"
websockets = "^11.0.0"
rich = "^13.0.0"
typer = "^0.9.0"
pydantic = "^2.0.0"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
python-dotenv = "^1.0.0"
cryptography = "^41.0.0"
bcrypt = "^4.0.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-magic = "^0.4.27"
pillow = "^10.0.0"
markupsafe = "^2.1.0"
html5lib = "^1.1"
cachetools = "^6.0.0"
diskcache = "^5.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"
flake8 = "^6.1.0"
pylint = "^2.17.0"
bandit = "^1.7.0"
safety = "^2.3.0"
pre-commit = "^3.3.0"
mkdocs = "^1.5.0"
mkdocs-material = "^9.2.0"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=staticflow --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["staticflow"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
